@@ -45,7 +45,7 @@ class Revelation(ui.App):
 		authmanager.gnome_authentication_manager_init()
 		ui.App.__init__(self, config.APPNAME)
 
-		self.connect("delete-event", lambda w,d: True ^ self.quit())
+		self.connect("delete-event", self.__cb_quit)
 
 		try:
 			self.__init_facilities()
@@ -178,7 +178,7 @@ class Revelation(ui.App):
 			"entry-goto"		: lambda w: self.entry_goto(self.tree.get_selected()),
 			"entry-remove"		: lambda w: self.entry_remove(self.tree.get_selected()),
 			"file-change-password"	: lambda w: self.file_change_password(),
-			"file-close"		: lambda w: self.quit(),
+			"file-close"		: self.__cb_quit,
 			"file-export"		: lambda w: self.file_export(),
 			"file-import"		: lambda w: self.file_import(),
 			"file-lock"		: lambda w: self.file_lock(),
@@ -193,7 +193,7 @@ class Revelation(ui.App):
 			"help-homepage"		: lambda w: gnome.url_show(config.URL),
 			"prefs"			: lambda w: dialog.Preferences(self, self.config).run(),
 			"pwgenerator"		: lambda w: dialog.PasswordGenerator(self, self.config).run(),
-			"quit"			: lambda w: self.quit(),
+			"quit"			: self.__cb_quit,
 			"redo"			: lambda w: self.redo(),
 			"select-all"		: lambda w: self.tree.select_all(),
 			"select-none"		: lambda w: self.tree.unselect_all(),
@@ -442,6 +442,16 @@ class Revelation(ui.App):
 			self.locktimer.stop()
 			self.file_lock()
 			self.locktimer.start(self.config.get("file/autolock_timeout") * 60)
+
+
+	def __cb_quit(self, widget, data = None):
+		"Callback for quit"
+
+		if self.quit() == False:
+			return True
+
+		else:
+			return False
 
 
 	def __cb_session_save(self, widget, phase, what, end, interaction, fast, data = None):
@@ -1249,6 +1259,7 @@ class Revelation(ui.App):
 
 			gtk.main_quit()
 			sys.exit(0)
+			return True
 
 		except dialog.CancelError:
 			self.statusbar.set_status("Quit cancelled")
